# list

indef/: List.hs  list-indef.cabal
indef/test/: Elt.hs  Test.hs
utils/: Utils.hs  list-utils.cabal
